# mawaqit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  code-of-conduct.md
.github/workflows/: ci.yml
examples/: high-latitude.rs  prayer-clock.rs  prayer-times.rs  qiblah.rs  schedule-builder.rs
src/: lib.rs  schedule.rs
src/astronomy/: mod.rs  ops.rs  qiblah.rs  solar.rs  unit.rs
src/methods/: mod.rs  moonsighting.rs
src/models/: adjustments.rs  high_altitude_rule.rs  madhab.rs  method.rs  mod.rs  parameters.rs  polar.rs  prayer.rs  rounding.rs  shafaq.rs
tests/: high_latitude.rs  methods.rs  polar.rs  southern.rs
